# RLTeamAerialCombat

./: .gitignore  Makefile  config.yaml  pyproject.toml  requirements.txt
configs/: dmc_hopper_hop_v0.yaml  dual_dogfight_config.yaml  dual_dogfight_config_mlp.yaml  dual_dogfight_config_transformer.yaml  dual_dogfight_mlp_config.yaml  dual_dogfight_transformer_config.yaml  quad_dogfight_config.yaml  quad_dogfight_config_mlp.yaml  quadx_pole_balance_config.yaml  quadx_pole_waypoints_config.yaml  quadx_waypoints_config.yaml
dogfighter/algorithms/: __init__.py  base.py  ccge.py  utils.py
dogfighter/bases/: base_actor.py  base_algorithm.py  base_critic.py  base_env_creators.py  base_env_interactors.py  base_replay_buffer.py  base_types.py
dogfighter/ccge/: ccge.py
dogfighter/env_interactors/: __init__.py  base.py  ma_env_interactor.py  mlp_ma_env_interactor.py  mlp_sa_vec_env_interactor.py  sa_vec_env_interactor.py  transformer_ma_env_interactor.py  utils.py
dogfighter/env_utils/: vec_env_gpuize_wrapper.py
dogfighter/envs/: __init__.py  base.py  sa_vec_env.py
dogfighter/models/: __init__.py  actors.py  base.py  bases.py  critic_ensemble.py  critics.py  (+2 more)
scripts/: run_dmc_obs_norm.sh  run_sweep.sh  sync_and_display.sh  train.sh  train_mlp.sh
src/: env_interaction_utils.py  ma_env_interaction_utils.py  ma_env_main.py  main.py  main2.py  model_evaluator.py  run_sweep.sh  setup_algorithms.py  setup_configs.py  setup_envs.py  setup_utils.py  sweep.yaml  train_mlp_env.py  train_utils.py  vec_env_interaction_utils.py  vec_env_main.py
tests/: test_dogfighter.py
(+83 files in other folders)
